2004-03-16  Masatake YAMATO  <jet@gyve.org>

	* register.el (register): Provide `register' feature.

2004-03-15  Masatake YAMATO  <jet@gyve.org>

	Added context menu support in smerge mode.
	Most of the part is written by Stefan Monnier.

	* smerge-mode.el (smerge-context-menu-map, smerge-context-menu):
	New keymap and menu.
	(smerge-text-properties): New function.
	(smerge-remove-props): New function.
	(smerge-popup-context-menu): New function.
	(smerge-resolve): Call `smerge-remove-props'.
	(smerge-keep-base, smerge-keep-other, smerge-keep-mine): Ditto.
	(smerge-keep-current): Ditto.
	(smerge-kill-current): New function.
	(smerge-match-conflict): Put text properties.
	Detect the file as `same-diff conflict' if the filename is "ANCESTOR".

2004-03-15  David Ponce  <david@dponce.com>

	* ruler-mode.el: (ruler-mode-left-fringe-cols)
	(ruler-mode-right-fringe-cols, ruler-mode-left-scroll-bar-cols)
	(ruler-mode-right-scroll-bar-cols): Remove.
	(ruler-mode-window-col, ruler-mode-mouse-set-left-margin)
	(ruler-mode-mouse-set-right-margin, ruler-mode-ruler):
	Use fringe-columns and scroll-bar-columns.

2004-03-15  Masatake YAMATO  <jet@gyve.org>

	* hl-line.el (hl-line-range-function): New variable.
	(hl-line-move): New function.
	(global-hl-line-highlight): Use `hl-line-move'.
	(hl-line-highlight): Ditto.

	* scroll-bar.el (scroll-bar-columns):
	* fringe.el (fringe-columns): New function derived from ruler-mode.el.

	* ruler-mode.el (top-level): Require scroll-bar and fringe.
	(ruler-mode-left-fringe-cols)
	(ruler-mode-right-fringe-cols): Use `fringe-columns'.
	(ruler-mode-right-scroll-bar-cols)
	(ruler-mode-left-scroll-bar-cols): Use `scroll-bar-columns'.
	(ruler-mode-ruler-function): New variable.
	(ruler-mode-header-line-format): Call `ruler-mode-ruler-function'
	if the value for `ruler-mode-ruler-function'is given.

	* hexl.el (hexl-mode-hook): Make the hook customizable.
	(hexl-address-area, hexl-ascii-area): New customize variables.